--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,3 +58,9 @@
 @import "_components/do/network";
 @import "_components/do/community";
 @import "_components/do/touch";
+
+@import "_components/are/main";
+@import "_components/are/collective";
+@import "_components/are/expertise";
+@import "_components/are/work";
+@import "_components/are/mapping";
