--- a/src/pug/are.pug
+++ b/src/pug/are.pug
@@ -8,3 +8,9 @@ extends shared/_layout
 block content
   div.body(class != pageClassName)
 
+    include components/are/_main
+    include components/are/_collective
+    include components/are/_expertise
+    include components/are/_work
+    include components/are/_mapping
+
