--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -190,3 +190,64 @@
     }
   }
 }
+
+.swiper {
+  &-slide {
+    &-circle {
+      overflow: hidden;
+      position: relative;
+      width: 56px;
+      height: 56px;
+      border-radius: 100%;
+      border: solid 2px #ffffff;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+    &-user {
+      display: flex;
+      align-items: center;
+
+      &.swiper-slide-user--dark {
+        > div {
+          &:nth-of-type(2) {
+            p,
+            span {
+              color: #4a4a4a;
+            }
+          }
+        }
+      }
+
+      > div {
+        &:nth-of-type(1) {
+          width: 72px;
+        }
+        &:nth-of-type(2) {
+          width: 100%;
+          max-width: calc(100% - 72px);
+
+          p {
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 1.39;
+            color: #ffffff;
+          }
+
+          span {
+            font-size: 16px;
+            line-height: 1.56;
+            color: #ffffff;
+          }
+        }
+      }
+    }
+  }
+}
