Who We Are page - add collective section - w\ adaptive.

--- a/src/pug/components/are/_collective.pug
+++ b/src/pug/components/are/_collective.pug
@@ -3,5 +3,30 @@
 section#collective.collective
   .c-grid
     .collective__wrapper
+      .collective__wrapper-left
+        
+        img(src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title="")
+        
+      .collective__wrapper-right
+
+        h2.collective__title.c-title!= "<span class='c-title--color'>COLLECTIVE</span> INTELLIGENCE"
+
+        p.collective__desc.collective__desc--pb!= "Almost all important problems are solved by groups of people rather than individuals alone. We believe that by working together in large teams we can deliver insight more intelligently, creatively and quickly than ever before possible."
+        p.collective__desc!= "Our vision is to redefine the way knowledge-work is done – investing in people and technology to develop, for the first time, truly effective crowdsourced research practices."
+
+        .are__block
+          div
+            .are__block-circle
+              i
+          div
+            span!= "Be part of a global, multidisciplinary network"
+
+        .are__block
+          div
+            .are__block-circle
+              i
+          div
+            span!= "Work collaboratively with brilliant, likeminded experts"
+
 
 // SECTION collective :: END
