--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -258,11 +258,98 @@ picture {
 }
 
 /* line 5, src/scss/_shared/_common.scss */
+.are__block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 67px;
+  border: solid 1px #ffffff7f;
+  background-color: #009688;
+  margin-bottom: 10px;
+}
+
+/* line 13, src/scss/_shared/_common.scss */
+.are__block:last-of-type {
+  margin-bottom: 0;
+}
+
+/* line 18, src/scss/_shared/_common.scss */
+.are__block > div:nth-of-type(1) {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 79px;
+}
+
+/* line 25, src/scss/_shared/_common.scss */
+.are__block > div:nth-of-type(2) {
+  width: 100%;
+  max-width: -webkit-calc(100% - 79px);
+  max-width: calc(100% - 79px);
+}
+
+/* line 29, src/scss/_shared/_common.scss */
+.are__block > div:nth-of-type(2) span {
+  font-size: 16px;
+  line-height: 2;
+  color: #ffffff;
+}
+
+/* line 37, src/scss/_shared/_common.scss */
+.are__block-circle {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  background-color: #ffffff;
+}
+
+/* line 46, src/scss/_shared/_common.scss */
+.are__block-circle i {
+  position: relative;
+  top: -1px;
+  width: 20px;
+  height: 13px;
+  border-style: solid;
+  border-width: 0 0 3px 3px;
+  border-color: #009688;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+/* line 63, src/scss/_shared/_common.scss */
 .nav--header {
   padding-bottom: 12px;
 }
 
-/* line 8, src/scss/_shared/_common.scss */
+/* line 66, src/scss/_shared/_common.scss */
 .nav--header .nav__list {
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -270,22 +357,22 @@ picture {
           justify-content: center;
 }
 
-/* line 11, src/scss/_shared/_common.scss */
+/* line 69, src/scss/_shared/_common.scss */
 .nav--header .nav__list-btn {
   color: #333333;
 }
 
-/* line 16, src/scss/_shared/_common.scss */
+/* line 74, src/scss/_shared/_common.scss */
 .nav--footer {
   padding-left: 107px;
 }
 
-/* line 19, src/scss/_shared/_common.scss */
+/* line 77, src/scss/_shared/_common.scss */
 .nav--footer .nav__list-btn {
   color: #ffffff;
 }
 
-/* line 24, src/scss/_shared/_common.scss */
+/* line 82, src/scss/_shared/_common.scss */
 .nav__list {
   display: -webkit-box;
   display: -webkit-flex;
@@ -297,13 +384,13 @@ picture {
           align-items: center;
 }
 
-/* line 28, src/scss/_shared/_common.scss */
+/* line 86, src/scss/_shared/_common.scss */
 .nav__list-item {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-/* line 33, src/scss/_shared/_common.scss */
+/* line 91, src/scss/_shared/_common.scss */
 .nav__list-btn {
   display: -webkit-box;
   display: -webkit-flex;
@@ -318,7 +405,7 @@ picture {
   text-transform: uppercase;
 }
 
-/* line 45, src/scss/_shared/_common.scss */
+/* line 103, src/scss/_shared/_common.scss */
 .logo {
   display: -webkit-box;
   display: -webkit-flex;
@@ -330,19 +417,19 @@ picture {
           align-items: flex-start;
 }
 
-/* line 49, src/scss/_shared/_common.scss */
+/* line 107, src/scss/_shared/_common.scss */
 .logo--footer {
   position: relative;
   top: -9px;
 }
 
-/* line 53, src/scss/_shared/_common.scss */
+/* line 111, src/scss/_shared/_common.scss */
 .logo--footer svg {
   width: 205px;
   fill: #fff;
 }
 
-/* line 59, src/scss/_shared/_common.scss */
+/* line 117, src/scss/_shared/_common.scss */
 .logo--header svg {
   width: 100%;
   height: 100%;
@@ -350,7 +437,7 @@ picture {
           filter: drop-shadow(0px 15px 0px rgba(0, 0, 0, 0.05));
 }
 
-/* line 69, src/scss/_shared/_common.scss */
+/* line 127, src/scss/_shared/_common.scss */
 .copyright {
   display: -webkit-box;
   display: -webkit-flex;
@@ -362,20 +449,20 @@ picture {
           align-items: center;
 }
 
-/* line 73, src/scss/_shared/_common.scss */
+/* line 131, src/scss/_shared/_common.scss */
 .copyright p {
   line-height: 1.43;
   letter-spacing: 1px;
   color: #ffffff;
 }
 
-/* line 78, src/scss/_shared/_common.scss */
+/* line 136, src/scss/_shared/_common.scss */
 .copyright p a {
   text-decoration: underline;
   color: #ffffff;
 }
 
-/* line 88, src/scss/_shared/_common.scss */
+/* line 146, src/scss/_shared/_common.scss */
 .subscribe__form {
   overflow: hidden;
   position: relative;
@@ -394,7 +481,7 @@ picture {
   background-color: #ffffff;
 }
 
-/* line 98, src/scss/_shared/_common.scss */
+/* line 156, src/scss/_shared/_common.scss */
 .subscribe__form-icon {
   display: -webkit-box;
   display: -webkit-flex;
@@ -415,13 +502,13 @@ picture {
   height: 100%;
 }
 
-/* line 108, src/scss/_shared/_common.scss */
+/* line 166, src/scss/_shared/_common.scss */
 .subscribe__form-icon .icon-subscribe {
   font-size: 13px;
   color: rgba(74, 74, 74, 0.23);
 }
 
-/* line 114, src/scss/_shared/_common.scss */
+/* line 172, src/scss/_shared/_common.scss */
 .subscribe__form input,
 .subscribe__form button {
   outline: none;
@@ -433,7 +520,7 @@ picture {
   min-height: 100%;
 }
 
-/* line 123, src/scss/_shared/_common.scss */
+/* line 181, src/scss/_shared/_common.scss */
 .subscribe__form input {
   width: 100%;
   max-width: -webkit-calc(100% - 110px);
@@ -473,7 +560,7 @@ picture {
   font-size: 16px;
 }
 
-/* line 136, src/scss/_shared/_common.scss */
+/* line 194, src/scss/_shared/_common.scss */
 .subscribe__form button {
   cursor: pointer;
   display: -webkit-box;
@@ -2399,6 +2486,65 @@ picture {
   background-color: #d8d8d8;
 }
 
+/* line 3, src/scss/_components/are/_collective.scss */
+.collective {
+  padding-top: 96px;
+  padding-bottom: 96px;
+  background-color: #44b4a8;
+}
+
+/* line 8, src/scss/_components/are/_collective.scss */
+.collective__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* line 11, src/scss/_components/are/_collective.scss */
+.collective__wrapper-left, .collective__wrapper-right {
+  width: 50%;
+}
+
+/* line 17, src/scss/_components/are/_collective.scss */
+.collective__wrapper-left img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 27, src/scss/_components/are/_collective.scss */
+.collective__title {
+  padding-bottom: 18px;
+  text-align: left;
+}
+
+/* line 31, src/scss/_components/are/_collective.scss */
+.collective__title.c-title {
+  color: #000000;
+}
+
+/* line 34, src/scss/_components/are/_collective.scss */
+.collective__title.c-title .c-title--color {
+  color: #000000;
+}
+
+/* line 40, src/scss/_components/are/_collective.scss */
+.collective__desc {
+  padding-bottom: 61px;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 1.45;
+  color: #000;
+}
+
+/* line 47, src/scss/_components/are/_collective.scss */
+.collective__desc--pb {
+  padding-bottom: 30px;
+}
+
 /* line 3, src/scss/_components/are/_mapping.scss */
 .mapping {
   padding-bottom: 108px;
@@ -2484,10 +2630,10 @@ picture {
 
 /* line 52, src/scss/_components/are/_mapping.scss */
 .mapping__content.is-active {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 
 /* line 56, src/scss/_components/are/_mapping.scss */
