--- a/src/scss/_components/are/_expertise.scss
+++ b/src/scss/_components/are/_expertise.scss
@@ -1,5 +1,35 @@
 // SECTION expertise :: START
 
-.expertise {}
+.expertise {
+  padding-top: 79px;
+  padding-bottom: 64px;
+  background-color: #f8f8f8;
+
+  &__title {
+    padding-bottom: 46px;
+    color: #4a4a4a;
+  }
+
+  &__wrapper {
+    &-0 {
+      .c-grid {
+        max-width: 1240px;
+      }
+    }
+
+    &-1 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-top: 47px;
+
+      .are__block {
+        width: 100%;
+        max-width: calc((100% - 20px) / 2);
+        margin-bottom: 0;
+      }
+    }
+  }
+}
 
 // SECTION expertise :: END
