--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -25,6 +25,7 @@
       &:nth-of-type(2) {
         width: 100%;
         max-width: calc(100% - 79px);
+        padding-right: 15px;
 
         span {
           font-size: 16px;
@@ -45,7 +46,7 @@
 
       i {
         position: relative;
-        top: -1px;
+        top: -2px;
         width: 20px;
         height: 13px;
         border-style: solid;
