--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -3,6 +3,98 @@
   max-width: 500px;
   height: 300px;
 
+  &-expertise {
+    max-width: 100%;
+    height: 450px;
+    padding: 0 15px 15px;
+
+    .swiper {
+      &-slide {
+        &-block {
+          width: 100%;
+          max-width: calc((100% - 60px) / 4);
+          height: 192px;
+          margin-top: 25px;
+          box-shadow: 0 11px 11px 0 #00000021;
+          background-color: #ffffff;
+
+          &-top {
+            position: relative;
+            height: 146px;
+
+            img {
+              z-index: -1;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+
+            &:after {
+              opacity: 0.8;
+              content: '';
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background-image: linear-gradient(to bottom, #00000000, #00000023 30%, #00000042 50%, #00000085 70%, #000000cc 90%, #000000e1 96%, #000);
+            }
+          }
+
+          &-bottom {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: calc(192px - 146px);
+            padding: 5px 10px;
+            text-align: center;
+
+            span {
+              white-space: nowrap;
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 1.5;
+              letter-spacing: -0.4px;
+              text-align: center;
+              color: #000;
+            }
+          }
+
+          &-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+          }
+        }
+      }
+
+      &-pagination {
+        top: 0;
+        bottom: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &-bullet {
+          opacity: 1;
+          width: 8px;
+          height: 8px;
+          margin-left: 10px;
+          margin-top: 10px;
+          background-color: #989898;
+
+          &-active {
+            background-color: #44a399;
+          }
+        }
+      }
+    }
+  }
+
   &-think {
     max-width: 100%;
     height: 355px;
